Changed Icon on Home Page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                 <i class="devicon-csharp-plain-wordmark colored icon"></i>
                 <i class="devicon-postgresql-plain-wordmark colored icon"></i>
                 <i class="devicon-bootstrap-plain-wordmark colored icon"></i>
-                <i class="devicon-heroku-plain-wordmark colored icon"></i>
+                <i class="devicon-css3-plain colored icon"></i>
             </div>
         </div>
     </div>
