--- a/Views/Shared/_LayoutLander.cshtml
+++ b/Views/Shared/_LayoutLander.cshtml
@@ -25,6 +25,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="apple-touch-icon" sizes="180x180" href="~/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="~/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="~/img/favicon-16x16.png" />
+    <link rel="manifest" href="~/images/site.webmanifest" />
 </head>
 <body>
     <header>
